--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     Dit wordt een ongeloofelijk lang paragraaf
 </p>
 <p>
-    hopelijk komen we eruit.
+    hopelijk komen we eruit. het lijkt er niet op.
 </p>
 
 </body>
